crates/tmark-writers/tests/snapshots/fixtures__lead@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#ts-lead[Boot sequence.] The device powers the flash before the SoC.

---requires---
{
  "packages": [],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
