crates/tmark-writers/tests/snapshots/fixtures__link-title-backslash@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p><a href="b" title="t\">a</a> <a href="d" title="t&quot;q">c</a> <a href="f" title="t\&quot;q">e</a></p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
