crates/tmark-writers/tests/snapshots/fixtures__link-title-backslash@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\href{b}{a} \href{d}{c} \href{f}{e}

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
