crates/tmark-writers/tests/snapshots/fixtures__link-title-backslash@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#link("b")[a] #link("d")[c] #link("f")[e]

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
