crates/tmark-writers/tests/snapshots/fixtures__lint-prose@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Figure 3 shows the trace; see the table below and the notes above.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
