crates/tmark-writers/tests/snapshots/fixtures__lint-structure@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<h1>Top</h1>
<h3>Skipped</h3>
<p><strong class="lead">Note.</strong></p>
<table id="fig:t">
<caption>T.</caption>
<thead>
<tr>
<th>a</th>
</tr>
</thead>
<tbody>
<tr>
<td>1</td>
</tr>
</tbody>
</table>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
