crates/tmark-writers/tests/snapshots/fixtures__lint-structure@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\section{Top}

\subsubsection{Skipped}

\tslead{Note.} Promoted.

\begin{table}[H]
\centering
\caption{T.}
\label{fig:t}
\vspace{0.5em}
\begin{tabularx}{\linewidth}{>{\raggedright\arraybackslash}X}
\toprule
\textbf{a} \\
\midrule
1 \\
\bottomrule
\end{tabularx}
\end{table}

---requires---
{
  "packages": [
    "booktabs",
    "epigraph",
    "float",
    "graphicx",
    "marginnote",
    "multicol",
    "progressbar",
    "tabularx",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
